// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleNav renders links grouped by category 1`] = `
Array [
  <button
    aria-controls="collapsibe-nav"
    aria-expanded="true"
    aria-pressed="true"
  />,
  <nav
    data-eui="EuiFlyout"
    data-test-subj="collapsibleNav"
    role="dialog"
  >
    <button
      aria-label="Close this dialog"
      data-test-subj="euiFlyoutCloseButton"
      type="button"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      style="flex-shrink: 0;"
    >
      <div
        class="euiCollapsibleNavGroup eui-yScroll emotion-euiCollapsibleNavGroup-notCollapsible-dark"
        id="generated-id"
        style="max-height: 40vh;"
      >
        <div
          class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children"
        >
          <span
            class="euiThemeProvider emotion-euiColorMode-dark"
          >
            <ul
              class="euiListGroup emotion-euiListGroup-none"
              style="max-inline-size: none;"
            >
              <li
                class="euiListGroupItem emotion-euiListGroupItem-text-s"
              >
                <a
                  class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-text-isClickable"
                  data-test-subj="collapsibleNavCustomNavLink"
                  href="Custom link"
                  rel="noreferrer"
                >
                  <span
                    class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                    title="Custom link"
                  >
                    Custom link
                  </span>
                </a>
              </li>
            </ul>
          </span>
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule emotion-euiHorizontalRule-full"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
      style="flex-shrink: 0;"
    >
      <div
        class="euiCollapsibleNavGroup eui-yScroll emotion-euiCollapsibleNavGroup-notCollapsible-light"
        id="generated-id"
        style="max-height: 40vh;"
      >
        <div
          class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children"
        >
          <ul
            aria-label="Pinned links"
            class="euiListGroup emotion-euiListGroup-none"
            style="max-inline-size: none;"
          >
            <li
              class="euiListGroupItem emotion-euiListGroupItem-text-s"
            >
              <a
                class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-text-isClickable"
                data-test-subj="homeLink"
                href="/"
                rel="noreferrer"
              >
                <span
                  class="euiListGroupItem__icon emotion-euiListGroupItem__icon"
                  color="inherit"
                  data-euiicon-type="home"
                />
                <span
                  class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                  title="Home"
                >
                  Home
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-euiCollapsibleNavGroup-isCollapsible-light"
      data-test-subj="collapsibleNavGroup-recentlyViewed"
    >
      <div
        class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
      >
        <button
          aria-controls="generated-id"
          aria-expanded="true"
          class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
          id="generated-id"
          type="button"
        >
          <span
            class="euiAccordion__buttonContent"
          >
            <div
              class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
            >
              <div
                class="euiFlexItem emotion-euiFlexItem-grow-1"
              >
                <h3
                  class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                  id="generated-id__title"
                >
                  Recently viewed
                </h3>
              </div>
            </div>
          </span>
        </button>
        <button
          aria-controls="generated-id"
          aria-expanded="true"
          aria-labelledby="generated-id"
          class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
          tabindex="-1"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="arrowRight"
          />
        </button>
      </div>
      <div
        aria-labelledby="generated-id"
        class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
        id="generated-id"
        role="group"
        style="block-size: 0;"
      >
        <div
          class="euiAccordion__children emotion-euiAccordion__children"
        >
          <div
            class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
          >
            <ul
              aria-label="Recently viewed links"
              class="euiListGroup emotion-EuiListGroup"
              style="max-inline-size: none;"
            >
              <li
                class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
              >
                <a
                  aria-label="recent 1"
                  class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                  data-test-subj="collapsibleNavAppLink--recent"
                  href="http://localhost/recent%201"
                  rel="noreferrer"
                  title="recent 1"
                >
                  <span
                    class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                    title="recent 1"
                  >
                    recent 1
                  </span>
                </a>
              </li>
              <li
                class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
              >
                <a
                  aria-label="recent 2"
                  class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                  data-test-subj="collapsibleNavAppLink--recent"
                  href="http://localhost/recent%202"
                  rel="noreferrer"
                  title="recent 2"
                >
                  <span
                    class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                    title="recent 2"
                  >
                    recent 2
                  </span>
                </a>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="euiHorizontalRule emotion-euiHorizontalRule-full"
    />
    <div
      class="euiFlexItem emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-EuiCollapsibleNavGroup"
        data-test-subj="collapsibleNavGroup-kibana"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="logoKibana"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Analytics
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Analytics"
                class="euiListGroup emotion-euiListGroup-none"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="discover"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="discover"
                    >
                      discover
                    </span>
                  </a>
                </li>
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="visualize"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="visualize"
                    >
                      visualize
                    </span>
                  </a>
                </li>
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="dashboard"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="dashboard"
                    >
                      dashboard
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-EuiCollapsibleNavGroup"
        data-test-subj="collapsibleNavGroup-observability"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="logoObservability"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Observability
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Observability"
                class="euiListGroup emotion-euiListGroup-none"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="metrics"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="metrics"
                    >
                      metrics
                    </span>
                  </a>
                </li>
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="logs"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="logs"
                    >
                      logs
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-EuiCollapsibleNavGroup"
        data-test-subj="collapsibleNavGroup-securitySolution"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="logoSecurity"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Security
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Security"
                class="euiListGroup emotion-euiListGroup-none"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="siem"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="siem"
                    >
                      siem
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiAccordion euiAccordion-isOpen euiCollapsibleNavGroup emotion-euiAccordion-EuiCollapsibleNavGroup"
        data-test-subj="collapsibleNavGroup-management"
      >
        <div
          class="euiAccordion__triggerWrapper emotion-EuiAccordionTrigger"
        >
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            class="euiAccordion__button euiCollapsibleNavGroup__heading emotion-euiAccordion__button"
            id="generated-id"
            type="button"
          >
            <span
              class="euiAccordion__buttonContent"
            >
              <div
                class="euiFlexGroup emotion-euiFlexGroup-m-flexStart-center-row"
              >
                <div
                  class="euiFlexItem emotion-euiFlexItem-growZero"
                >
                  <span
                    data-euiicon-type="managementApp"
                  />
                </div>
                <div
                  class="euiFlexItem emotion-euiFlexItem-grow-1"
                >
                  <h3
                    class="euiTitle euiCollapsibleNavGroup__title emotion-euiTitle-xxs"
                    id="generated-id__title"
                  >
                    Management
                  </h3>
                </div>
              </div>
            </span>
          </button>
          <button
            aria-controls="generated-id"
            aria-expanded="true"
            aria-labelledby="generated-id"
            class="euiButtonIcon euiAccordion__arrow emotion-euiButtonIcon-xs-empty-text-euiAccordion__arrow-right-isOpen"
            tabindex="-1"
            type="button"
          >
            <span
              aria-hidden="true"
              class="euiButtonIcon__icon"
              color="inherit"
              data-euiicon-type="arrowRight"
            />
          </button>
        </div>
        <div
          aria-labelledby="generated-id"
          class="euiAccordion__childWrapper emotion-euiAccordion__childWrapper-isOpen"
          id="generated-id"
          role="group"
          style="block-size: 0;"
        >
          <div
            class="euiAccordion__children emotion-euiAccordion__children"
          >
            <div
              class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children-withHeading"
            >
              <ul
                aria-label="Primary navigation links, Management"
                class="euiListGroup emotion-euiListGroup-none"
                style="max-inline-size: none;"
              >
                <li
                  class="euiListGroupItem emotion-euiListGroupItem-subdued-s"
                >
                  <a
                    class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-subdued-isClickable"
                    data-test-subj="collapsibleNavAppLink"
                    href="monitoring"
                    rel="noreferrer"
                  >
                    <span
                      class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                      title="monitoring"
                    >
                      monitoring
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="euiCollapsibleNavGroup emotion-euiCollapsibleNavGroup-notCollapsible-none"
        data-test-subj="collapsibleNavGroup-noCategory"
        id="generated-id"
      >
        <div
          class="euiCollapsibleNavGroup__children emotion-euiCollapsibleNavGroup__children"
        >
          <ul
            class="euiListGroup emotion-euiListGroup-s-flush-maxWidthDefault"
          >
            <li
              class="euiListGroupItem emotion-euiListGroupItem-text-s"
            >
              <a
                class="euiListGroupItem__button emotion-euiListGroupItem__inner-s-text-isClickable"
                data-test-subj="collapsibleNavAppLink"
                href="canvas"
                rel="noreferrer"
              >
                <span
                  class="euiListGroupItem__label emotion-euiListGroupItem__label-truncate"
                  title="canvas"
                >
                  canvas
                </span>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </nav>,
]
`;

exports[`CollapsibleNav renders the default nav 1`] = `
<CollapsibleNav
  appId$={
    BehaviorSubject {
      "_value": "test",
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  basePath={
    BasePath {
      "assetsHrefBase": "/test",
      "basePath": "/test",
      "get": [Function],
      "prepend": [Function],
      "publicBaseUrl": undefined,
      "remove": [Function],
      "serverBasePath": "/test",
    }
  }
  button={<button />}
  closeNav={[Function]}
  customNavLink$={
    BehaviorSubject {
      "_value": undefined,
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  homeHref="/"
  id="collapsibe-nav"
  isLocked={false}
  isNavOpen={false}
  navLinks$={
    BehaviorSubject {
      "_value": Array [],
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  navigateToApp={[Function]}
  navigateToUrl={[Function]}
  onIsLockedUpdate={[Function]}
  recentlyAccessed$={
    BehaviorSubject {
      "_value": Array [],
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
  url="/"
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    css={
      Object {
        "map": undefined,
        "name": "1pvcuvk",
        "next": undefined,
        "styles": "@media (max-height: 240px){overflow-y:auto;}",
        "toString": [Function],
      }
    }
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={false}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <button
      aria-controls="collapsibe-nav"
      aria-expanded={false}
      aria-pressed={false}
      onMouseUpCapture={[Function]}
      onTouchEnd={[Function]}
    />
  </EuiCollapsibleNav>
</CollapsibleNav>
`;

exports[`CollapsibleNav renders the default nav 2`] = `
<CollapsibleNav
  appId$={
    BehaviorSubject {
      "_value": "test",
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  basePath={
    BasePath {
      "assetsHrefBase": "/test",
      "basePath": "/test",
      "get": [Function],
      "prepend": [Function],
      "publicBaseUrl": undefined,
      "remove": [Function],
      "serverBasePath": "/test",
    }
  }
  button={<button />}
  closeNav={[Function]}
  customNavLink$={
    BehaviorSubject {
      "_value": undefined,
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  homeHref="/"
  id="collapsibe-nav"
  isLocked={false}
  isNavOpen={false}
  isOpen={true}
  navLinks$={
    BehaviorSubject {
      "_value": Array [],
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  navigateToApp={[Function]}
  navigateToUrl={[Function]}
  onIsLockedUpdate={[Function]}
  recentlyAccessed$={
    BehaviorSubject {
      "_value": Array [],
      "closed": false,
      "currentObservers": null,
      "hasError": false,
      "isStopped": false,
      "observers": Array [
        SafeSubscriber {
          "_finalizers": Array [
            Subscription {
              "_finalizers": null,
              "_parentage": [Circular],
              "closed": false,
              "initialTeardown": [Function],
            },
          ],
          "_parentage": null,
          "closed": false,
          "destination": ConsumerObserver {
            "partialObserver": Object {
              "complete": undefined,
              "error": undefined,
              "next": [Function],
            },
          },
          "initialTeardown": undefined,
          "isStopped": false,
        },
      ],
      "thrownError": null,
    }
  }
  storage={
    StubBrowserStorage {
      "keys": Array [],
      "size": 0,
      "sizeLimit": 5000000,
      "values": Array [],
    }
  }
  url="/"
>
  <EuiCollapsibleNav
    aria-label="Primary"
    button={<button />}
    css={
      Object {
        "map": undefined,
        "name": "1pvcuvk",
        "next": undefined,
        "styles": "@media (max-height: 240px){overflow-y:auto;}",
        "toString": [Function],
      }
    }
    data-test-subj="collapsibleNav"
    id="collapsibe-nav"
    isOpen={false}
    onClose={[Function]}
    ownFocus={false}
    size={248}
  >
    <button
      aria-controls="collapsibe-nav"
      aria-expanded={false}
      aria-pressed={false}
      onMouseUpCapture={[Function]}
      onTouchEnd={[Function]}
    />
  </EuiCollapsibleNav>
</CollapsibleNav>
`;
